--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,38 @@
   <div class="map-frame">
     <div id="map"></div>
   </div>
+</div><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br>
+<br><br>
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-1">
+		</div>
+		<div class="col-md-4">
+			<form role="form">
+				<div class="form-group">
+					 
+					<label for="exampleInputEmail1">
+						Latitud:
+					</label>
+					<input type="email" class="form-control" id="exampleInputEmail1" />
+				</div>
+				<div class="form-group">
+					 
+					<label for="exampleInputPassword1">
+						Longitud
+					</label>
+					<input type="password" class="form-control" id="exampleInputPassword1" />
+				</div>
+				<button type="submit" class="btn btn-primary">
+					Submit
+				</button>
+			</form>
+		</div>
+		<div class="col-md-7">
+		</div>
+	</div>
 </div>
